# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(minimal-printf)

target_include_directories(mbed-core
    INTERFACE
        .
)

target_sources(mbed-core
    INTERFACE
        ATCmdParser.cpp
        CThunkBase.cpp
        CriticalSectionLock.cpp
        DeepSleepLock.cpp
        FileBase.cpp
        FileHandle.cpp
        FilePath.cpp
        FileSystemHandle.cpp
        LocalFileSystem.cpp
        Stream.cpp
        SysTimer.cpp
        mbed_alloc_wrappers.cpp
        mbed_application.c
        mbed_assert.c
        mbed_atomic_impl.c
        mbed_board.c
        mbed_critical.c
        mbed_error.c
        mbed_error_hist.c
        mbed_interface.c
        mbed_mem_trace.cpp
        mbed_mktime.c
        mbed_mpu_mgmt.c
        mbed_os_timer.cpp
        mbed_poll.cpp
        mbed_power_mgmt.c
        mbed_retarget.cpp
        mbed_rtc_time.cpp
        mbed_sdk_boot.c
        mbed_semihost_api.c
        mbed_stats.c
        mbed_thread.cpp
        mbed_wait_api_no_rtos.c
)

add_subdirectory(TARGET_CORTEX_M EXCLUDE_FROM_ALL)

if ($<IN_LIST,TARGET_CORTEX_M,INTERFACE_COMPILE_DEFINITIONS>)
target_link_libraries(mbed-core
    INTERFACE
        mbed-cortex-m-fault-handler
)
endif()
